# gemfile_downloader.rs

./: Cargo.toml  LICENSE
.github/workflows/: publish.yml
src/: download.rs  gem_version.rs  lib.rs  parser.rs  unpack_gem.rs  unpack_tar_gz.rs
