[package]
name = "gemfile_downloader"
description = "Installs libraries from Ruby's Gemfile."
keywords = ["gemfile", "ruby"]
license = "MIT"
version = "3.0.0"
edition = "2021"

[dependencies]
flate2 = "1.0.35"
futures = "0.3.31"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = {version = "1.0.217", features = ["derive"]}
tar = "0.4.43"
tokio = {version =  "1.42.0", features = ["full"]}
